--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -181,11 +181,8 @@
     <ClCompile Include="Map.cpp">
       <Filter>Archivos de código fuente\Objects\Level</Filter>
     </ClCompile>
-    <ClCompile Include="Axe.cpp">
-      <Filter>Archivos de código fuente\Objects\Player\Melee</Filter>
-    </ClCompile>
     <ClCompile Include="Melee.cpp">
-      <Filter>Archivos de código fuente\Objects\Player\Melee</Filter>
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
     </ClCompile>
     <ClCompile Include="Life.cpp">
       <Filter>Archivos de código fuente\Objects\Player</Filter>
@@ -415,6 +412,24 @@
     <ClCompile Include="MissileTurret.cpp">
       <Filter>Archivos de código fuente\Objects\Interactables</Filter>
     </ClCompile>
+    <ClCompile Include="PopUpPanel.cpp">
+      <Filter>Archivos de encabezado\HUD\Panels</Filter>
+    </ClCompile>
+    <ClCompile Include="BossPoleAxe.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
+    </ClCompile>
+    <ClCompile Include="BossSword.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
+    </ClCompile>
+    <ClCompile Include="Knife.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
+    </ClCompile>
+    <ClCompile Include="PoleAxe.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
+    </ClCompile>
+    <ClCompile Include="Sword.cpp">
+      <Filter>Archivos de código fuente\Objects\Melee</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -554,9 +569,6 @@
     </ClInclude>
     <ClInclude Include="BasicShotgun.h">
       <Filter>Archivos de encabezado\Guns</Filter>
-    </ClInclude>
-    <ClInclude Include="Axe.h">
-      <Filter>Archivos de encabezado\Objects\Melee</Filter>
     </ClInclude>
     <ClInclude Include="Melee.h">
       <Filter>Archivos de encabezado\Objects\Melee</Filter>
@@ -867,6 +879,24 @@
     <ClInclude Include="MissileTurret.h">
       <Filter>Archivos de encabezado\Objects\Interactables</Filter>
     </ClInclude>
+    <ClInclude Include="PopUpPanel.h">
+      <Filter>Archivos de encabezado\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="BossPoleAxe.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
+    </ClInclude>
+    <ClInclude Include="BossSword.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
+    </ClInclude>
+    <ClInclude Include="Knife.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
+    </ClInclude>
+    <ClInclude Include="PoleAxe.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
+    </ClInclude>
+    <ClInclude Include="Sword.h">
+      <Filter>Archivos de encabezado\Objects\Melee</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de código fuente">
@@ -1010,9 +1040,6 @@
     <Filter Include="Archivos de código fuente\Objects\Interactables">
       <UniqueIdentifier>{a2aab5e8-1f03-438e-ad1c-94a98250433c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de código fuente\Objects\Player\Melee">
-      <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Archivos de código fuente\HUD\Shop">
       <UniqueIdentifier>{82374948-29e9-45e7-a3a0-fd573588350b}</UniqueIdentifier>
     </Filter>
@@ -1027,6 +1054,9 @@
     </Filter>
     <Filter Include="Archivos de código fuente\Events">
       <UniqueIdentifier>{c0c20e7b-ff95-4a2d-8b6f-2b0da7fa47a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\Objects\Melee">
+      <UniqueIdentifier>{91c2fb3e-33b4-42c8-b741-0a0b383c9988}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
